--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "mycoin-blockchain",
+  "name": "mycoin",
   "version": "1.0.0",
-  "main": "index.js",
-  "repository": "https://github.com/nguyenthuanit265/mycoin-blockchain.git",
-  "author": "nguyenthuanit265 <nguyenthuanit265@gmail.com>",
-  "license": "MIT",
+  "description": "",
+  "private": true,
+  "workspaces": [
+    "workspace/*"
+  ],
   "scripts": {
     "dev:server": "yarn workspace server dev",
     "dev:client": "yarn workspace client start",
@@ -12,6 +13,8 @@
     "start:client": "yarn workspace client start",
     "start": "concurrently --kill-others-on-fail \"yarn server\"  \"yarn client\""
   },
+  "author": "",
+  "license": "ISC",
   "dependencies": {
     "concurrently": "^6.0.2"
   }
